[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Towers/towerDefense_tile250.png" type="Texture" id=1]
[ext_resource path="res://Assets/Towers/towerDefense_tile249.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Lib/Build/BuildBar.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/HUD/coin_01.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/HUD/food.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/HUD/themes/wc3_theme.tres" type="Theme" id=7]
[ext_resource path="res://Assets/UI/HUD/purple_book.png" type="Texture" id=8]
[ext_resource path="res://Scenes/HUD/Gold.gd" type="Script" id=9]
[ext_resource path="res://Scenes/HUD/KnowledgeTome.gd" type="Script" id=10]
[ext_resource path="res://Scenes/HUD.gd" type="Script" id=11]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="BuildBar" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -80.0
margin_right = 82.0
script = ExtResource( 3 )

[node name="MissleT1" type="TextureButton" parent="BuildBar" groups=["build_buttons"]]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
rect_pivot_offset = Vector2( -785, -267 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
expand = true

[node name="GunT1" type="TextureButton" parent="BuildBar" groups=["build_buttons"]]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
rect_pivot_offset = Vector2( -785, -267 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -108.0
margin_right = 198.0

[node name="StartWaveButton" type="Button" parent="VBoxContainer"]
margin_right = 198.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Start wave"

[node name="StopWaveButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 198.0
margin_bottom = 44.0
focus_mode = 0
enabled_focus_mode = 0
text = "Stop wave"

[node name="WaveProgressLabel" type="Label" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 198.0
margin_bottom = 62.0
text = "Wave progress (PLACEHOLDER)"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 198.0
margin_bottom = 90.0

[node name="WaveLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Wave:"

[node name="WaveEdit" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 43.0
margin_right = 117.0
margin_bottom = 24.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 198.0
margin_bottom = 108.0

[node name="MobCountLeft" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 83.0
margin_bottom = 14.0
text = "Mobs exited:"

[node name="MobCountRight" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 87.0
margin_right = 179.0
margin_bottom = 14.0
text = "PLACEHOLDER"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_top = 353.0
margin_right = 1280.0
margin_bottom = 367.0
text = "GAME OVER"

[node name="TopBar" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1280.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
margin_right = 1280.0
margin_bottom = 40.0

[node name="Gold" type="MenuButton" parent="TopBar/HBoxContainer"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
theme = ExtResource( 7 )
toggle_mode = false
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "0"
icon = ExtResource( 5 )
clip_text = true
align = 2
script = ExtResource( 9 )

[node name="KnowledgeTome" type="MenuButton" parent="TopBar/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
theme = ExtResource( 7 )
toggle_mode = false
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "0"
icon = ExtResource( 8 )
clip_text = true
align = 2
script = ExtResource( 10 )

[node name="Food" type="MenuButton" parent="TopBar/HBoxContainer"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
theme = ExtResource( 7 )
toggle_mode = false
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "0"
icon = ExtResource( 6 )
clip_text = true
align = 2

[node name="AboutCreators" type="MenuButton" parent="TopBar/HBoxContainer"]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
hint_tooltip = "Remake developers: Praytic & kevl
Original idea by: geX"
theme = ExtResource( 7 )
toggle_mode = false
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "Creators"
clip_text = true
align = 2

[node name="Hints" type="RichTextLabel" parent="."]
margin_left = 401.0
margin_top = 298.0
margin_right = 701.0
margin_bottom = 398.0
text = "Move camera: WASD
Zoom camera: Mouse wheel, touchpad"

[connection signal="pressed" from="VBoxContainer/StartWaveButton" to="." method="_on_StartWaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/StopWaveButton" to="." method="_on_StopWaveButton_pressed"]
